# qBittorrent-Vanced

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  LOGO_PROMPTS.md  README.md  RESEARCH.md  ROADMAP.md  Roadmap_Blocked.md  build.bat  build.ps1  bump-version.ps1  generate-patches.ps1  installer.nsi  package.ps1  vcpkg.json
.github/workflows/: build_and_release.yml  ci-windows.yml  release.yml
doc/en/: qbittorrent-nox.1  qbittorrent-nox.1.md  qbittorrent.1  qbittorrent.1.md
doc/ru/: qbittorrent-nox.1  qbittorrent-nox.1.md  qbittorrent.1  qbittorrent.1.md
src/: qbittorrent.exe.manifest  qbittorrent.rc
src/app/: CMakeLists.txt  application.cpp  application.h  cmdoptions.cpp  cmdoptions.h  main.cpp  signalhandler.cpp
src/base/: CMakeLists.txt  autocategorymanager.cpp  autocategorymanager.h  preferences.cpp  preferences.h  stalledtorrentmanager.cpp  stalledtorrentmanager.h  version.h.in
src/base/bittorrent/: sessionimpl.cpp  sessionimpl.h
src/base/net/: downloadhandlerimpl.cpp  downloadhandlerimpl.h  geoipmanager.cpp  geoipmanager.h
src/base/utils/: fs.cpp  fs.h  random.cpp
src/gui/: CMakeLists.txt  aboutdialog.cpp  appcastparser.cpp  appcastparser.h  batchoperationsdialog.cpp  batchoperationsdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  portablebackupdialog.cpp  portablebackupdialog.h  previewlistdelegate.cpp  progressbarpainter.cpp  progressbarpainter.h  stacktracedialog.cpp  statusbar.cpp  torrentcardswidget.cpp  torrentcardswidget.h  torrentcategorydialog.cpp  torrentcategorydialog.h  torrentcontentitemdelegate.cpp  transferlistdelegate.cpp  transferlistdelegate.h  transferlistmodel.cpp  transferlistsearchquery.cpp  transferlistsearchquery.h  transferlistsortmodel.cpp  transferlistsortmodel.h  transferlistwidget.cpp  transferlistwidget.h  traypopupwidget.cpp  traypopupwidget.h  uithemecommon.h  uithemedialog.cpp  uithemedialog.h  uithemedialog.ui  uithememanager.cpp  (+1 more)
src/gui/properties/: propertieswidget.cpp  proptabbar.h
src/lang/: qbittorrent_ar.ts  qbittorrent_az@latin.ts  qbittorrent_be.ts  qbittorrent_bg.ts  qbittorrent_ca.ts  qbittorrent_cs.ts  qbittorrent_da.ts  qbittorrent_de.ts  qbittorrent_el.ts  qbittorrent_en.ts  qbittorrent_en_AU.ts  qbittorrent_en_GB.ts  qbittorrent_eo.ts  qbittorrent_es.ts  qbittorrent_et.ts  qbittorrent_eu.ts  qbittorrent_fa.ts  qbittorrent_fi.ts  qbittorrent_fr.ts  qbittorrent_gl.ts  qbittorrent_he.ts  qbittorrent_hi_IN.ts  qbittorrent_hr.ts  qbittorrent_hu.ts  qbittorrent_hy.ts  qbittorrent_id.ts  qbittorrent_is.ts  qbittorrent_it.ts  qbittorrent_ja.ts  qbittorrent_ka.ts  qbittorrent_ko.ts  qbittorrent_lt.ts  qbittorrent_ltg.ts  qbittorrent_lv_LV.ts  qbittorrent_mn_MN.ts  qbittorrent_ms_MY.ts  qbittorrent_nb.ts  qbittorrent_nl.ts  qbittorrent_oc.ts  qbittorrent_pl.ts  (+16 more)
src/webui/: CMakeLists.txt  webapplication.cpp  webapplication.h  webapplicationsecurity.cpp  webapplicationsecurity.h  webui.cpp  webui.h
src/webui/api/: appcontroller.cpp  torrentscontroller.cpp
src/webui/www/: .gitignore  eslint.config.mjs  package-lock.json  package.json
src/webui/www/private/: download.html  downloadlimit.html  index.html  newcategory.html  newtag.html  rename_files.html  setlocation.html  shareratio.html  torrentoptions.html  upload.html  uploadlimit.html
src/webui/www/private/css/: Core.css  Layout.css  Window.css  dynamicTable.css  noscript.css  style.css  vanillaSelectBox.css
src/webui/www/private/scripts/: client.js  color-scheme.js  contextmenu.js  dynamicTable.js  misc.js  mocha-init.js  piecesbar.js  prop-files.js
src/webui/www/private/scripts/lib/: vanillaSelectBox.js
src/webui/www/private/views/: about.html  log.html  preferences.html  rssDownloader.html  transferlist.html
src/webui/www/public/: index.html
src/webui/www/public/css/: login.css
test/: CMakeLists.txt  largelibrary-smoke.ps1  testappcastparser.cpp  testcmdoptions.cpp  testdownloadhandlerimpl.cpp  testtransferlistsearchquery.cpp  testuithemedialog.cpp  testwebapplicationsecurity.cpp  webapi-smoke.ps1
